fixed shifting modal issue

--- a/client/src/components/Cart/Modal/elements.modal.css
+++ b/client/src/components/Cart/Modal/elements.modal.css
@@ -11,7 +11,7 @@
     width: 100vw;
     height: 100vh;
     background-color: rgba(200, 200, 200);
-    position: fixed;
+    position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
